Added Admin NavBar Fragment. Closes #7

--- a/src/main/resources/templates/admin/category/createCategoryForm.html
+++ b/src/main/resources/templates/admin/category/createCategoryForm.html
@@ -22,45 +22,9 @@
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 
 <body>
-<ul class="nav nav-pills admin-navbar">
-    <li><a href="#" th:href="@{'/admin/'}">Admin Main Page</a></li>
-    <li class="dropdown active">
-        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-            Categories <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-            <li><a href="#" th:href="@{'/admin/showCategories/page/1'}" type="button">Show All Categories</a></li>
-            <li><a href="#" th:href="@{'/admin/createCategory/'}" type="button" >Create New Category</a></li>
-        </ul>
-    </li>
-    <li class="dropdown">
-        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-            Movies <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-            <li><a href="#" th:href="@{'/admin/showMovies/page/1'}" type="button" >Show All Movies</a></li>
-            <li><a href="#" th:href="@{'/admin/createMovie/'}" type="button">Create New Movie</a></li>
-        </ul>
-    </li>
-    <li class="dropdown">
-        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-            Actors <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-            <li><a href="#">Show All Movies</a></li>
-            <li><a href="#">Create New Movie</a></li>
-        </ul>
-    </li>
-    <li class="dropdown">
-        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-            Directors <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-            <li><a href="#">Show All Movies</a></li>
-            <li><a href="#">Create New Movie</a></li>
-        </ul>
-    </li>
-</ul>
+
+<ul class="nav nav-pills admin-navbar" th:replace="fragmets/adminNavbar :: adminNavbar"></ul>
+
 <div class="container-fluid" style="margin-top: 75px">
 
 
