--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -22,50 +22,10 @@
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 
 <body>
-<div class="container">
 
-        <ul class="nav nav-pills admin-navbar">
-            <li class="active"><a href="#">Admin Main Page</a></li>
-            <li class="dropdown">
-                <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-                    Categories <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#" th:href="@{'/admin/showCategories/page/1'}" type="button">Show All Categories</a></li>
-                    <li><a href="#" th:href="@{'/admin/createCategory/'}" type="button" >Create New Category</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-                    Movies <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#" th:href="@{'/admin/showMovies/page/1'}" type="button" >Show All Movies</a></li>
-                    <li><a href="#" th:href="@{'/admin/createMovie/'}" type="button">Create New Movie</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-                    Actors <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Show All Movies</a></li>
-                    <li><a href="#">Create New Movie</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
-                    Directors <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Show All Movies</a></li>
-                    <li><a href="#">Create New Movie</a></li>
-                </ul>
-            </li>
-        </ul>
+<ul class="nav nav-pills admin-navbar" th:replace="fragmets/adminNavbar :: adminNavbar"></ul>
 
-</div>
-
+<div class="container"></div>
 
 </body>
 </html>
