--- a/src/main/resources/templates/user/movies/moviesSorted.html
+++ b/src/main/resources/templates/user/movies/moviesSorted.html
@@ -24,6 +24,7 @@
 
 <ul class="nav nav-pills admin-navbar" th:replace="fragmets/userNavbar :: userNavbar"></ul>
 
+
 <div class="row">
     <div class="col-md-12">
         <h1 class="section-header">Movies</h1>
@@ -55,6 +56,8 @@
     </div>
     <div class="col-md-2"></div>
 </div>
+
+<script type="text/javascript" th:src="@{/js/custom.js}"></script>
 
 </body>
 </html>
