--- a/src/main/resources/templates/user/movies/showMovie.html
+++ b/src/main/resources/templates/user/movies/showMovie.html
@@ -23,8 +23,6 @@
 <body>
 
 
-
-
 <ul class="nav nav-pills admin-navbar" th:replace="fragmets/userNavbar :: userNavbar"></ul>
 
 <div class="container-fluid" style="margin-top: 50px">
@@ -131,6 +129,8 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript" th:src="@{/js/custom.js}"></script>
 
 </body>
 </html>
