--- a/src/main/resources/templates/user/movies/showMovies.html
+++ b/src/main/resources/templates/user/movies/showMovies.html
@@ -56,5 +56,7 @@
     <div class="col-md-2"></div>
 </div>
 
+<script type="text/javascript" th:src="@{/js/custom.js}"></script>
+
 </body>
 </html>
