Working on #8. Added Navbar Fragment to Actors

--- a/src/main/resources/templates/fragmets/userNavbar.html
+++ b/src/main/resources/templates/fragmets/userNavbar.html
@@ -89,7 +89,7 @@
             </ul>
         </li>
 
-        <li class="dropdown">
+        <li class="dropdown" th:class="${#httpServletRequest.requestURI.contains('actor')} ? 'dropdown active' : 'dropdown'" >
             <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
                 Actors <span class="caret"></span>
             </a>
