--- a/src/main/resources/templates/user/actors/showActors.html
+++ b/src/main/resources/templates/user/actors/showActors.html
@@ -22,6 +22,8 @@
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 <body>
 
+<ul class="nav nav-pills admin-navbar" th:replace="fragmets/userNavbar :: userNavbar"></ul>
+
 <div class="row">
     <div class="col-md-12">
         <h1 class="section-header">Actors</h1>
