--- a/src/main/resources/templates/admin/actor/showActorsForm.html
+++ b/src/main/resources/templates/admin/actor/showActorsForm.html
@@ -53,7 +53,8 @@
                                     <td th:text="${actor.dateOfBirth}"></td>
                                     <td th:text="${actor.movies.size()}"></td>
                                     <td class="col-md-1">
-                                        <a class="btn btn-info" href="#" role="button">Change Image</a>
+                                        <a class="btn btn-info" href="#" th:href="@{'/actor/' + ${actor.id} + '/image'}"
+                                           role="button">Change Image</a>
                                     </td>
                                     <td class="col-md-1">
                                         <a class="btn btn-primary" href="#" role="button">Update Actor</a>
