--- a/src/main/resources/templates/admin/actor/showActorsForm.html
+++ b/src/main/resources/templates/admin/actor/showActorsForm.html
@@ -65,7 +65,8 @@
                                 </tr>
                             </table>
                             <div class="row col-md-12">
-                                <a class="btn btn-success" href="#" role="button">New Actor</a>
+                                <a class="btn btn-success" href="#" th:href="@{'/admin/actor/createActor'}"
+                                   role="button">New Actor</a>
                             </div>
                         </div>
                         <div class="row" th:fragment="pagination">
