--- a/src/main/resources/templates/admin/actor/createActorForm.html
+++ b/src/main/resources/templates/admin/actor/createActorForm.html
@@ -75,12 +75,25 @@
                             </div>
                         </div>
 
+                        <div class="form-group"
+                             th:class="${#fields.hasErrors('country')} ? 'form-group has-error' : 'form-group'">
+                            <label>Country</label>
+                            <div>
+                                <input type="text" class="form-control input-lg" th:field="*{country}"
+                                       th:errorclass="has-error">
+                                <span class="help-block" th:if="${#fields.hasErrors('country')}">
+                                                <ul>
+                                                    <li th:each="err : ${#fields.errors('country')}" th:text="${err}"></li>
+                                                </ul>
+                                            </span>
+                            </div>
+                        </div>
 
                         <div class="form-group"
                              th:class="${#fields.hasErrors('dateOfBirth')} ? 'form-group has-error' : 'form-group'">
                             <label>Date Of Birth</label>
                             <div>
-                                    <input type="date" class="form-control input-lg" placeholder="MM/DD/YYY" th:field="*{dateOfBirth}" th:value="*{dateOfBirth}"
+                                    <input type="date" class="form-control input-lg" placeholder="YYYY-MM-DD" th:field="*{dateOfBirth}" th:value="*{dateOfBirth}"
                                            th:errorclass="has-error">
                                 <span class="help-block" th:if="${#fields.hasErrors('dateOfBirth')}">
                                                 <ul>
