Working on #2. Update Actor

--- a/src/main/resources/templates/fragmets/adminNavbar.html
+++ b/src/main/resources/templates/fragmets/adminNavbar.html
@@ -46,7 +46,7 @@
             </a>
             <ul class="dropdown-menu">
                 <li><a href="#" th:href="@{'/admin/actor/showActors/page/1'}">Show All Actors</a></li>
-                <li><a href="#">Create New Actor</a></li>
+                <li><a href="#" th:href="@{'/admin/actor/createActor'}">Create New Actor</a></li>
             </ul>
         </li>
 
