--- a/src/main/resources/templates/admin/actor/showActorsForm.html
+++ b/src/main/resources/templates/admin/actor/showActorsForm.html
@@ -57,7 +57,8 @@
                                            role="button">Change Image</a>
                                     </td>
                                     <td class="col-md-1">
-                                        <a class="btn btn-primary" href="#" role="button">Update Actor</a>
+                                        <a class="btn btn-primary" href="#" th:href="@{'/admin/actor/update/' + ${actor.id}}"
+                                           role="button">Update Actor</a>
                                     </td>
                                     <td class="col-md-1">
                                         <a class="btn btn-danger" href="#" role="button">Delete Actor</a>
