Working on #1. Delete News

--- a/src/main/resources/templates/admin/news/showNewsForm.html
+++ b/src/main/resources/templates/admin/news/showNewsForm.html
@@ -55,7 +55,7 @@
                                     </td>
                                     <td class="col-md-1">
                                         <a class="btn btn-danger" href="#"
-                                           role="button">Delete</a>
+                                        th:href="@{'/admin/news/delete/'  + ${news.id}}" role="button">Delete</a>
                                     </td>
                                 </tr>
                             </table>
